[project]
name = "dangbei2api"
version = "0.2.0"
description = "将当贝 AI 网页版能力封装为 OpenAI 兼容 API"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "slowapi>=0.1.9",
    "aiosqlite>=0.19.0",
]

[project.scripts]
dangbei2api = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
